# luciq-swatpack

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  schema_v0_1.json
examples/swat_sample_output/: luciq_swatpack.json  luciq_swatpack_report.md
examples/swat_sample_output_2/: luciq_swatpack.json  luciq_swatpack_report.md
fixtures/android_kotlin/app/: build.gradle.kts
fixtures/android_kotlin/app/src/main/: AndroidManifest.xml
fixtures/android_kotlin/app/src/main/java/com/example/app/: MyApplication.kt
fixtures/flutter_app/: pubspec.yaml
fixtures/luciq_not_installed/App/: App.swift  Info.plist
fixtures/mixed_spm_pods/: Package.resolved
fixtures/mixed_spm_pods/App/: App.swift  Info.plist
fixtures/pods_only/: Podfile
fixtures/pods_only/App/: App.swift  Info.plist
fixtures/react_native/: package.json
fixtures/react_native/src/: App.tsx
fixtures/spm_only/: AndroidManifest.xml  Package.resolved
fixtures/spm_only/.github/workflows/: ci.yml
fixtures/spm_only/App/: App.swift  Info.plist
src/luciq_swatpack/: __init__.py  analysis.py  constants.py  plan.py  reporting.py
src/luciq_swatpack.egg-info/: PKG-INFO
tests/: test_analysis.py  test_cli.py  test_constants.py  test_reporting.py
