[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "luciq-swatpack"
version = "0.2.0"
description = "Deterministic Luciq SWAT Pack collector - Multi-platform SDK diagnostics for iOS, Android, React Native, and Flutter"
authors = [{name = "Fares Nabil", email = "support@luciq.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["luciq", "diagnostics", "mobile", "sdk", "ios", "android", "react-native", "flutter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "jsonschema>=4.22",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/luciqai/luciq-swatpack"
Repository = "https://github.com/luciqai/luciq-swatpack"
Changelog = "https://github.com/luciqai/luciq-swatpack/blob/main/CHANGELOG.md"

[project.scripts]
luciq-swatpack = "luciq_swatpack.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["luciq_swatpack"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
